# ros-nvim

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  stylua.toml
lua/ros-nvim/: completion.lua  config.lua  init.lua  ros.lua  ros_cli.lua  ros_handle.lua
lua/ros-nvim/telescope/: pickers.lua
lua/telescope/_extensions/: ros.lua
queries/ros/: highlights.scm
test/: init.lua
test/ros1/: Dockerfile
treesitter-ros/: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package.json
treesitter-ros/bindings/node/: binding.cc  index.js
treesitter-ros/bindings/rust/: lib.rs
treesitter-ros/corpus/: builtin.txt  comments.txt  constants.txt
treesitter-ros/queries/: highlights.scm
treesitter-ros/src/: grammar.json  node-types.json  parser.c
