[package]
name = "tree-sitter-ros"
description = "ros grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "rosmsg"]
categories = ["parsing", "text-editors"]
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
